# HSIC-bottleneck

./: .gitignore  README.org  pyproject.toml
.claude/: settings.json
config/: README.org
scripts/: README.org  batch.sh  debug.sh  download.sh  grid-search-params-resnet.sh  grid-search-params-unformat.sh  grid-search-seed.sh  grid-search-sigma.sh  lazy-plot.sh  task_combsig.sh  task_general-resconv.sh  task_general.sh  task_hsicsolve-beta.sh  task_needle.sh  task_resconv.sh  task_varied-act.sh  task_varied-depth.sh  task_varied-dim.sh  task_varied-ep.sh
src/: README.org
src/hsicbt/: __init__.py  cli.py  config.py
src/hsicbt/conf/: config.yaml  plot_config.yaml
src/hsicbt/conf/experiment/: general-backprop.yaml  general-format.yaml  general-hsicbt.yaml  hsicsolve-beta.yaml  hsicsolve.yaml  needle.yaml  resconv-backprop.yaml  resconv-format.yaml  resconv-hsicbt.yaml  sigma-combined.yaml  varied-activation.yaml  varied-depth.yaml  varied-dim.yaml  varied-epoch.yaml
src/hsicbt/core/: dispatcher.py  engine.py  train_hsic.py  train_misc.py  train_standard.py
src/hsicbt/math/: hsic.py
src/hsicbt/model/: block.py  mae.py  mensemble.py  mensemblecomb.py  mhconv.py  mhlinear.py  mneedle.py  mresconv.py  mreslinear.py  mvanilla.py
src/hsicbt/task/: task_general.py  task_hsicsolve.py  task_needle.py  task_resconv.py  task_sigmacomb.py  task_variedact.py  task_varieddepth.py  task_varieddim.py  task_variedep.py  utils.py
src/hsicbt/utils/: color.py  const.py  dataset.py  io.py  meter.py  misc.py  path.py  plot.py  welcome.py
tests/: ISSUE-0010-BCD.py
