[project]
name = "hsicbt"
version = "1.0.0"
description = "The HSIC Bottleneck: Deep Learning without Back-Propagation (AAAI 2020)"
readme = { file = "README.org", content-type = "text/plain" }
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Kurt Wan-Duo Ma" },
    { name = "J. P. Lewis" },
    { name = "W. Bastiaan Kleijn" },
]
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "numpy>=1.24",
    "scipy>=1.10",
    "tqdm>=4.65",
    "pyyaml>=6.0",
    "matplotlib>=3.7",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
]

[project.scripts]
hsicbt = "hsicbt.cli:main"
hsicbt-plot = "hsicbt.cli:plot_main"

[dependency-groups]
dev = ["ruff>=0.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hsicbt"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
    "E501",   # line length handled by the formatter
    "E741",   # ambiguous variable names (X, Y, l) are conventional in the math here
]

[tool.ruff.lint.per-file-ignores]
"src/hsicbt/__init__.py" = ["F401"]
